--- a/files/home/ytka/printer_data/config/printer.cfg
+++ b/files/home/ytka/printer_data/config/printer.cfg
@@ -66,7 +66,7 @@ square_corner_velocity:5.0
 max_z_velocity:20
 max_z_accel:3000
 #velocity_range_limit:35_65
-device_type: Duck Pro // Anycubic Kobra 3
+device_type: Anycubic Kobra 3
 print_size: 260*260*260mm
 
 [stepper_x]
@@ -128,9 +128,9 @@ heater_pin : nozzle_mcu:PB8
 sensor_type : NTC 100K MGB18-104F39050L32
 sensor_pin : nozzle_mcu:PA0
 control : pid
-pid_Kp : 12.206120
-pid_Ki : 0.517208
-pid_Kd : 72.016108
+pid_Kp : 19.026
+pid_Ki : 0.893
+pid_Kd : 101.311
 min_temp : -200
 min_safe_temp : 170
 min_extrude_temp : 170
@@ -143,9 +143,9 @@ heater_pin : PA0
 sensor_type : NTC 100K beta 3950
 sensor_pin : PC0
 control : pid
-pid_Kp : 54.027
-pid_Ki : 0.770
-pid_Kd : 248.182
+pid_Kp : 63.575
+pid_Ki : 1.054
+pid_Kd : 958.388
 min_temp : -200
 min_safe_temp : 45
 max_safe_temp : 110
@@ -291,7 +291,6 @@ axes_map: y,x,z
 accel_chip_x: lis2dw12
 accel_chip_y: lis2dw12 bed
 probe_points:127, 127, 20
-# Duck Pro changed: this config could lead to wrong IS configuration that will show you "better" result with a cost of quality (vibrations will remain, IS will round up corners, etc.)
 # min_freq : 10
 # max_freq : 100
 # accel_per_hz : 150
@@ -326,13 +325,11 @@ direction: up
 threshold_factor: 1.02
 
 [cs1237]
-#level_pin:nozzle_mcu:PA7
+level_pin:nozzle_mcu:PA7
 dout_pin:nozzle_mcu:PA6
 sclk_pin:nozzle_mcu:PA5
 register:60
 sensitivity:-3000
-samples_count:50
-data_bit:24
 head_block_sensitivity:-300000
 scratch_sensitivity:-100000
 self_check_sensitivity:-400
@@ -352,7 +349,7 @@ shaper_type_y: mzv
 
 [gcode_macro SINGLE_WIPE_NOZZLE]
 gcode:
-    G90 
+    G90
     G1 X46 Y260 Z-0.8 F9600
     G1 X50 Y260 Z1 F9600
     G1 X86 Y260 Z1 F9600
@@ -369,14 +366,14 @@ gcode:
     single_wipe_nozzle
     G1 X46 Y259 Z1 F9600
     G1 X46 Y259.5 Z-0.8 F9600
-    
+
 [gcode_macro MOVE_HEAT_POS]
 gcode:
     G90
     G1 Z15 F4800
-    #G28 X
     HOME_XY
-    
+    M400
+
 [gcode_macro UNDERLINE]
 gcode:
     G90
@@ -384,8 +381,10 @@ gcode:
     G92 E0
     G1 Y1 F2400
     G1 X180 E40 F500
+    M400
     G92 E0
     G1 E-0.5 F300
+    M400
 
 [gcode_macro M486]
 gcode:
@@ -393,11 +392,11 @@ gcode:
       EXCLUDE_OBJECT RESET=1
       EXCLUDE_OBJECT_SET_OBJ T={{ params.T }}
     {% endif %}
-    
+
     {% if params.C %}
       EXCLUDE_OBJECT CURRENT=1
     {% endif %}
-    
+
     {% if params.P %}
       EXCLUDE_OBJECT NAME={{ params.P }}
     {% endif %}
@@ -412,4 +411,4 @@ gcode:
 
     {% if params.U %}
       EXCLUDE_OBJECT RESET=1 NAME={{ params.U }}
-    {% endif %}    
+    {% endif %}
